# ur-lstm

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
experiments/: README.md  adding_task.py  copy_task.py  image_classification.py  language_task.py  requirements.txt  tensorboard_utils.py
experiments/configs/: adding_config.yaml  copy_config.yaml  language_config.yaml
experiments/models/: adding_model.py  image_model.py  language_model.py  utils.py
src/: adding_task.py  copy_task.py  image_classification.py  language_task.py
src/configs/: adding_config.yaml  copy_config.yaml  image_config.yaml  language_config.yaml
src/datasets/: adding_dataset.py  copy_dataset.py  permuted_dataset.py
src/models/: adding_model.py  copy_model.py  image_model.py  language_model.py  ur_lstm.py  utils.py
src/utils/: tensorboard_utils.py
ur_lstm/: __init__.py  ur_lstm.py
